--- a/package.json
+++ b/package.json
@@ -111,6 +111,6 @@
   },
   "icon": "uni-helper.png",
   "sponsor": {
-    "url": "https://www.paypal.me/wurui7"
+    "url": "https://github.com/ModyQyW/sponsors"
   }
 }
